--- a/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.html
+++ b/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.html
@@ -4,7 +4,7 @@
         <FeeSidebar></FeeSidebar>
     </mat-drawer>
     <mat-drawer-content>
-        <alert></alert>
+        <!-- <alert></alert> -->
         <router-outlet></router-outlet>
     </mat-drawer-content>
 </mat-drawer-container>
