--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <mat-card [ngClass]="{'width100':deviceXs,'width80':!deviceXs}">
-    <mat-card-title style="margin-left: 20px;margin-top: 20px;">Sign up</mat-card-title>
+    <mat-card-title style="margin-left: 20px;margin-top: 20px;"></mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
