--- a/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
@@ -69,8 +69,8 @@
                 <ng-container matColumnDef="Amount">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Amount </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <FeeEditInput [data]="element.Amount|number:'1.2-2'" (tried)="getoldvalue($event)"
-                            (focusOut)='updateAmount(element,$event)'></FeeEditInput>
+                        <edit-input [data]="element.Amount|number:'1.2-2'" 
+                            (focusOut)='updateAmount(element,$event)'></edit-input>
                     </mat-cell>
                 </ng-container>
                 <!-- 
@@ -94,8 +94,8 @@
                 <ng-container matColumnDef="PaymentOrder">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Payment Order </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <FeeEditInput [data]="element.PaymentOrder" (tried)="getoldvalue($event)"
-                            (focusOut)='updatePaymentOrder(element,$event)'></FeeEditInput>
+                        <edit-input [data]="element.PaymentOrder"
+                            (focusOut)='updatePaymentOrder(element,$event)'></edit-input>
                     </mat-cell>
                 </ng-container>
 
