--- a/src/app/modules/auth/appuserdashboard/appuserdashboard.component.html
+++ b/src/app/modules/auth/appuserdashboard/appuserdashboard.component.html
@@ -1,65 +1,122 @@
+
+<div class="Container">
 <div style="padding:15px 15px 0px 15px;">
-    <div><strong>Application Roles Users</strong></div>    
+    <div><strong>Application Users</strong></div>
 </div>
 <div style="padding: 15px;" fxLayout="row wrap" fxLayoutGap="100px">
     <div style="width: 100%;">
-        <mat-table #table [dataSource]="dataSource">
-            <ng-container matColumnDef="Paid">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>
-                </mat-header-cell>
-                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    <mat-icon matTooltip="paid" *ngIf="element.Paid">done</mat-icon>
-                    <mat-icon matTooltip="pending" *ngIf="!element.Paid">pending</mat-icon>
+        <div>
+            <form [formGroup]="searchForm">
+                <mat-form-field appearance="outline">
+                    <mat-label>Organization</mat-label>
+                    <mat-select formControlName="Organization">
+                        <mat-option value="0">--select--</mat-option>
+                        <mat-option *ngFor="let item of Organizations" [value]="item.MasterDataId">{{item.MasterDataName}}
+
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Department</mat-label>
+                    <mat-select formControlName="Department">
+                        <mat-option value="0">--select--</mat-option>
+                        <mat-option *ngFor="let item of Departments" [value]="item.MasterDataId">{{item.MasterDataName}}
+                            
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Location</mat-label>
+                    <mat-select formControlName="Location">
+                        <mat-option value="0">--select--</mat-option>
+                        <mat-option *ngFor="let item of Locations" [value]="item.MasterDataId">{{item.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="Name" autocomplete="off">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput formControlName="Email" autocomplete="off">
+            </mat-form-field>
+            <button class="mat-raised-button" (click)="GetAppUsers()"><mat-icon>search</mat-icon></button>
+        </form>
+        </div>
+        <mat-table #table [dataSource]="datasource">
+            <ng-container matColumnDef="UserId">
+                <mat-header-cell *matHeaderCellDef> User Id</mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.UserId}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="ClassFeeName">
-                <mat-header-cell *matHeaderCellDef> Fee </mat-header-cell>
+            <ng-container matColumnDef="UserName">
+                <mat-header-cell *matHeaderCellDef> User </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <button mat-button (click)="expandedElement = expandedElement === element ? null : element">
-                        {{element.ClassFeeName}}
-                    </button>                    
+                        {{element.UserName}}
+                    </button>
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="FeeAmount">
-                <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
+            <ng-container matColumnDef="Email">
+                <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.FeeAmount}}
+                    {{element.Email}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="PaidAmt">
-                <mat-header-cell *matHeaderCellDef> Paid Amount </mat-header-cell>
+            <ng-container matColumnDef="ContactNo">
+                <mat-header-cell *matHeaderCellDef> Contact No. </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.PaidAmt|number:'1.2-2'}}
+                    {{element.ContactNo}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="Pay">
-                <mat-header-cell *matHeaderCellDef> Payable Amount </mat-header-cell>
+            <ng-container matColumnDef="OrgName">
+                <mat-header-cell *matHeaderCellDef> Organization </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <FeeEditInput *ngIf="element.Action && exceptionColumns" [data]="element.Pay|number:'1.2-2'"
-                        (focusOut)='enableAction(element,$event)'
-                        (keyup)="validate($event)">
-                    </FeeEditInput>
-                    <span *ngIf="element.Action && !exceptionColumns">{{element.Pay}}</span>
+                    {{element.OrgName}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="BalanceAmt">
-                <mat-header-cell *matHeaderCellDef> Balance </mat-header-cell>
+            <ng-container matColumnDef="Department">
+                <mat-header-cell *matHeaderCellDef> Department </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.BalanceAmt}}
+                    {{element.Department}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="PaymentDate">
-                <mat-header-cell *matHeaderCellDef> Payment Date </mat-header-cell>
+            <ng-container matColumnDef="Location">
+                <mat-header-cell *matHeaderCellDef> Location </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <span *ngIf="element.Paid">{{element.PaymentDate| date:'dd/MM/yyyy'}}</span>
-                    <mat-form-field *ngIf="!element.Paid && element.Action" appearance="outline" [style.width.px]="125">
-                        <input [(value)]="element.PaymentDate" matInput [matDatepicker]="picker" autocomplete="off"
+                    {{element.Location}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="ValidFrom">
+                <mat-header-cell *matHeaderCellDef> Valid From </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <!-- <span *ngIf="element.ValidFrom">{{element.ValidFrom| date:'dd/MM/yyyy'}}</span> -->
+                    <mat-form-field appearance="outline" [style.width.px]="100">
+                        <input [(value)]="element.ValidFrom" matInput [matDatepicker]="picker" autocomplete="off"
                             (focus)="picker.open()" readonly>
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
-
+            <ng-container matColumnDef="ValidTo">
+                <mat-header-cell *matHeaderCellDef> Valid To </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <!-- <span *ngIf="element.ValidTo">{{element.ValidTo| date:'dd/MM/yyyy'}}</span> -->
+                    <mat-form-field appearance="outline" [style.width.px]="100">
+                        <input [(value)]="element.ValidTo" matInput [matDatepicker]="picker" autocomplete="off"
+                            (focus)="picker.open()" readonly>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Active">
+                <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.Active}}
+                </mat-cell>
+            </ng-container>
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
@@ -70,16 +127,16 @@
             </ng-container>
             <ng-container matColumnDef="expandedDetail">
                 <mat-cell *matCellDef="let detail">
-                    <table *ngIf="detail.element.PaymentDetails.length>0">
+                    <table *ngIf="detail.element.RoleUsers.length>0">
                         <tr style="background-color: lightgray;">
-                            <td>Sl.No.</td>
-                            <td>Amount</td>
-                            <td>Date</td>
+                            <td>Sl no.</td>
+                            <td>Application</td>
+                            <td>Role</td>
                         </tr>
-                        <tr *ngFor="let item of detail.element.PaymentDetails;let i=index">
+                        <tr *ngFor="let item of detail.element.RoleUsers;let i=index">
                             <td>{{i+1}}</td>
-                            <td>{{item.PaymentAmt}}</td>
-                            <td>{{item.PaymentDate|date:'dd/MM/yyyy hh:mm'}}</td>
+                            <td>{{item.Application}}</td>
+                            <td>{{item.Role}}</td>
                         </tr>
                     </table>
                 </mat-cell>
@@ -92,4 +149,5 @@
             </mat-row>
         </mat-table>
     </div>
+</div>
 </div>
