--- a/src/app/modules/allnewsdashboard/allnewsdashboard.component.scss
+++ b/src/app/modules/allnewsdashboard/allnewsdashboard.component.scss
@@ -74,7 +74,7 @@ div .ng-star-inserted:hover {
  // padding: 5px;
   cursor          : pointer;
   background-color: var(--onHoverColor);
-  color: white;
+  //color: white;
   //clip-path: polygon(-5% 50%,5% 0%, 100% 0%, 100% 100%, 5% 100%);
 }
 //   &:before{
