--- a/src/app/modules/contact/addMessage/contact.component.html
+++ b/src/app/modules/contact/addMessage/contact.component.html
@@ -50,6 +50,6 @@
         </div>
     </mat-card-content>
     <mat-card-actions>
-    <button class="mat-raised-button" (click)="back()"><mat-icon>arrow_back</mat-icon></button>
+    <button class="mat-raised-button" *ngIf="Id>0" (click)="back()"><mat-icon>arrow_back</mat-icon></button>
     </mat-card-actions>
 </mat-card>
