--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -1,20 +1,28 @@
 :host {
     width       : 100%;
 }
-
+::ng-deep table,tr,td{
+    border-collapse: collapse;
+    border:0px;
+}
+::ng-deep td{
+    vertical-align: top;
+    border-bottom:1px solid lightslategray;
+}
 mat-card-title {
     padding: 20px 0px 0px 20px;
     //color: rgb(201, 200, 200,.9);
 }
 .clickable{
     margin-left: 20px;
-    //padding: 20px;
+    padding: 3px;
     text-decoration: none;
     color:lightgrey;
     
 }
 .clickable:hover{
-    background-color:var(--onHoverColor);
+    background-color:var(--maincolor1);
+    //padding: 3px;
 }
 .contentbody {
     //border-top-left-radius: 1em;
@@ -48,6 +56,7 @@ mat-card-title {
     height    : 50%;
     margin-top: -50px;
     padding   : 30px;
+    line-height: 25px;
     //margin-top: -100px;
 }
 
