--- a/src/app/modules/newsdashboard/newsdashboard.component.html
+++ b/src/app/modules/newsdashboard/newsdashboard.component.html
@@ -1,10 +1,13 @@
+<div>
+<img src="../../../assets/images/25years.png" width="100%" class="img"/>
 <mat-card>
     <mat-card-title><span class="title">{{PageTitle}}</span>
     </mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
-        <!-- <mat-divider></mat-divider> -->
-        <div class="contentbox">
+        
+       
+        <div class="contentbox">            
             <div fxLayout="row" fxLayoutAlign="start start" *ngFor="let element of AllData">
                 <img src="../../../assets/images/icons8-vote.svg" style="margin-top:8px;" />
                 <a class="subtitle" style="text-decoration:none;color:rgb(201, 200, 200)" (click)="view(element)">
@@ -28,3 +31,4 @@
 
     </mat-card-content>
 </mat-card>
+</div>
