--- a/src/app/modules/newsdashboard/newsdashboard.component.scss
+++ b/src/app/modules/newsdashboard/newsdashboard.component.scss
@@ -7,10 +7,12 @@
 }
 
 mat-card {
-  background-color:var(--maincolor1);
+  background-color  : var(--maincolor1);
   //border-color: gainsboro;
-  //border-radius   : 1em;
-  margin-top      : 15px;
+  border-radius     : 0em;
+  padding           : 0px;
+  //padding-top: 15px;  
+  //margin-top      : 15px;
   //padding-top: 20px;
 }
 
@@ -24,6 +26,19 @@ mat-card {
   line-height: 30px;
 }
 
+.img {
+  margin-left: 5px;
+  margin-top : 15px;
+  border-top-left-radius: 1em;
+  border     : 3px solid var(--mainTitleColor);
+  //border-bottom-color: rgb(255, 255, 255, 20%);
+  opacity    : .5;
+}
+
+::ng-deep .img:hover{
+  opacity: .8;
+}
+
 table {
   width: 100%;
 }
@@ -35,26 +50,30 @@ button {
 .subtitle {
   padding: 3px;
 }
-.mat-card-title{
+
+.mat-card-title {
   margin-bottom: 2px;
 }
-div.ng-star-inserted{
+
+div.ng-star-inserted {
   height: 60px;
 }
+
 .title {
-  border-top-left-radius   : 5px;
-  border-top-right-radius   : 5px;
-  padding         : 5px;
-  background-color: rgb(255, 255, 255, 20%);
-  margin-top      : 15px;
-  font-size       : medium;
-  display         : grid;
-  place-items     : center;
-  color           :orange;
+  //  border-top-left-radius   : 5px;
+  //  border-top-right-radius   : 5px;
+  padding            : 5px;
+  background-color   :var(--mainTitleColor);// rgb(255, 255, 255, 20%);
+  // margin-top      : 15px;
+  //width: 100%;
+  font-size          : medium;
+  display            : grid;
+  place-items        : center;
+  color              : orange;
 }
 
 .contentbox {
-  border         : thin solid rgb(255, 255, 255, 20%);
+  border-bottom          : thin solid rgb(255, 255, 255, 20%);
   border-collapse: collapse;
   padding        : 10px;
 }
@@ -65,32 +84,19 @@ td.mat-footer-cell {
   width              : 300px;
   border-bottom-width: 0px;
 }
-.news img{
+
+.news img {
   display: inline-block;
-}  
+}
+
 div .ng-star-inserted:hover {
-  padding: 5px;
+  padding         : 5px;
   cursor          : pointer;
-  background-color: var(--onHoverColor);
-  color: white;
+  background-color: var(--mainTitleColor);
+  color           : white;
   //clip-path: polygon(-5% 50%,5% 0%, 100% 0%, 100% 100%, 5% 100%);
 }
-//   &:before{
-//     content:'';
-//     //position: relative;
-//     display: inline-block;   
-//     //color:lightgreen;
-//     height:16px;
-//     width: 16px;
-//     //left: 2em;
-//     //display: block;
-//     //border-radius: 50%;
-//     background-image: url('../../../assets/images/icons8-vote-16.png');
-//     background-size: contain;
-//     margin-right: 1em;
-//     font-family: "Material Icons"; 
-//   }
-// }
+
 a:hover {
   cursor: pointer;
 }
