--- a/src/app/modules/allnewsdashboard/allnewsdashboard.component.scss
+++ b/src/app/modules/allnewsdashboard/allnewsdashboard.component.scss
@@ -46,7 +46,7 @@ div.ng-star-inserted{
 .title {
   border-top-left-radius   : 5px;
   border-top-right-radius   : 5px;
-  padding         : 5px;
+  padding         : 10px;
   background-color: rgb(255, 255, 255, 20%);
   margin-top      : 15px;
   font-size       : medium;
@@ -73,7 +73,7 @@ td.mat-footer-cell {
 div .ng-star-inserted:hover {
  // padding: 5px;
   cursor          : pointer;
-  background-color: var(--onHoverColor);
+  background-color: var(--mainTitleColor);
   //color: white;
   //clip-path: polygon(-5% 50%,5% 0%, 100% 0%, 100% 100%, 5% 100%);
 }
