--- a/src/app/modules/newsdashboard/newsdashboard.component.scss
+++ b/src/app/modules/newsdashboard/newsdashboard.component.scss
@@ -96,7 +96,9 @@ div .ng-star-inserted:hover {
   color           : white;
   //clip-path: polygon(-5% 50%,5% 0%, 100% 0%, 100% 100%, 5% 100%);
 }
-
+button:hover{
+  cursor: pointer;
+}
 a:hover {
   cursor: pointer;
 }
