--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,20 +5,20 @@
             <button mat-button (click)="toggleSideBar()">
                 <mat-icon>menu</mat-icon>
             </button>
-            <a [routerLink]="['/home/display/0/0/']"><img src="assets/images/stpaulslogo.png" alt="St Paul's Institute"
-                    width="70px" /></a>
-            <div fxLayout="row" fxLayoutAlign="space-between center">
+            <a [routerLink]="['/home/display/0/0/']"><img src="assets/images/ttplogo1.png" alt="St Paul's Institute"
+                    width="50px" /></a>
+            <!-- <div fxLayout="row" fxLayoutAlign="space-between center">
                 <span><strong>ST. PAUL'S INSTITUTE</strong></span>
-            </div>
+            </div> -->
         </div>
 
-        <div>
+        <!-- <div>
             <div fxLayout="row" fxLayoutAlign="space-around end"><span style="height: 40px;">&nbsp;</span></div>
             <div fxLayout="row" fxLayoutAlign="space-around end" *ngIf="!deviceXs">
                    <span class="transparent">TRAIN UP A CHILD IN THE WAY HE SHOULD GO.</span> 
                         <sub style="font-size:14px;color:lightgray">-Proverbs 22:16</sub>
             </div>
-        </div>
+        </div> -->
         <div fxLayout="row" fxLayoutAlign="space-between center">
             <span class="rightside" *ngIf="!deviceXs">
                 <button mat-button (click)="contactus()">
