--- a/src/app/modules/auth/appuser/appuser.component.html
+++ b/src/app/modules/auth/appuser/appuser.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Add User</mat-card-title>
+    <mat-card-title>{{title}}</mat-card-title>
     <mat-card-content>
         <alert></alert>
         <div fxLayout="row wrap" fxLayoutAlign="space-around center" fxLayout.xs="column" fxLayoutGap="50px">
@@ -41,6 +41,27 @@
                     <input formControlName="ValidTo" matInput [matDatepicker]="ValidTo" autocomplete="off">
                     <mat-datepicker-toggle matSuffix [for]="ValidTo"></mat-datepicker-toggle>
                     <mat-datepicker #ValidTo></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Department</mat-label>
+                    <mat-select formControlName="DepartmentId">
+                        <mat-option value="">--select--</mat-option>
+                        <mat-option *ngFor="let item of Departments" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+                    </mat-select>              
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Location</mat-label>
+                    <mat-select formControlName="LocationId">
+                        <mat-option value="">--select--</mat-option>
+                        <mat-option *ngFor="let item of Locations" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Manager</mat-label>
+                    <mat-select formControlName="ManagerId">
+                        <mat-option value="">--select--</mat-option>
+                        <mat-option *ngFor="let item of AppUsers" [value]="item.ApplicationUserId">{{item.UserName}}</mat-option>
+                    </mat-select>
                 </mat-form-field>
                 <mat-form-field appearance="outline" [style.width.pc]="32">
                     <mat-label>Remarks</mat-label>
