--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -11,7 +11,7 @@
     <mat-card-content>
         <!-- <mat-progress-spinner *ngIf="loading" class="example-margin" [color]="color" [mode]="mode" [value]="value">
         </mat-progress-spinner> -->
-        <mat-spinner  *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <mat-spinner  *ngIf="loading" diameter="50" style="color:white;position:relative;margin-left: 50%;"></mat-spinner>
 
         <div class="container">
             <div style="background-color:  var(--maincolor1);height: 5px;">&nbsp;</div>
