--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.html
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.html
@@ -12,7 +12,7 @@
                         <span [ngClass]="getClass(item)"></span>
                     </div>
                     <div class="label-container">
-                        <span>{{item.label}}</span>
+                        <div class="span">{{item.label}}</div>
                     </div>
                 </div>
                 <div class="icon-arrow-container" *ngIf='item.hasChilden'>
