--- a/src/app/modules/define-pages/texteditor/texteditor.component.scss
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.scss
@@ -9,9 +9,6 @@ ckeditor{
 button{
     width:10em;
 }
-// mat-card{
-//     height:100%;
-// }
 button{
     margin-right: 5px;
 }
@@ -28,4 +25,5 @@ mat-card{
 }
 .photo{
     margin: 10px;
+    margin-left: 0px;
 }
