--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.html
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.html
@@ -1,30 +1,30 @@
-  <mat-spinner *ngIf="loading"></mat-spinner>
-  <div style="border-radius: 2rem;padding-top: 15px;">
-    <!-- <ng-material-multilevel-menu [configuration]='config' [items]='appitem' (selectedItem)="selectedItem($event)">
-    </ng-material-multilevel-menu> -->
-    <ng-material-multilevel-menu [items]='appitem' 
-        
-        [configuration]='config' (selectedItem)="selectedItem($event)">
-        <ng-template #listTemplate let-item="item" let-configuration="configuration">
-            <div class="my-cool-menu-item" [dir]="configuration.rtlLayout  ? 'rtl' : 'ltr'">
-                <div class="title-and-image">
-                    <div class="icon-container">
-                        <span [ngClass]="getClass(item)"></span>
-                    </div>
-                    <div class="label-container">
-                        <span>{{item.label}}</span>
-                    </div>
-                </div>
-                <div class="icon-arrow-container" *ngIf='item.hasChilden'>
-                    <mat-icon *ngIf="!configuration.rtlLayout" [@ExpandedLTR]="item.expanded ? 'yes' : 'no'">
-                        keyboard_arrow_down
-                    </mat-icon>
-                    <mat-icon *ngIf="configuration.rtlLayout" [@ExpandedRTL]="item.expanded ? 'yes' : 'no'">
-                        keyboard_arrow_down
-                    </mat-icon>
-                </div>
-            </div>
-        </ng-template>
-    </ng-material-multilevel-menu>
+<mat-spinner *ngIf="loading"></mat-spinner>
+<div style="border-radius: 2rem;padding-top: 15px;">
+  <!-- <ng-material-multilevel-menu [configuration]='config' [items]='appitem' (selectedItem)="selectedItem($event)">
+  </ng-material-multilevel-menu> -->
+  <ng-material-multilevel-menu [items]='appitem' 
+      
+      [configuration]='config' (selectedItem)="selectedItem($event)">
+      <ng-template #listTemplate let-item="item" let-configuration="configuration">
+          <div class="my-cool-menu-item" [dir]="configuration.rtlLayout  ? 'rtl' : 'ltr'">
+              <div class="title-and-image">
+                  <div class="icon-container">
+                      <span [ngClass]="getClass(item)"></span>
+                  </div>
+                  <div class="label-container">
+                      <div class="span">{{item.label}}</div>
+                  </div>
+              </div>
+              <div class="icon-arrow-container" *ngIf='item.hasChilden'>
+                  <mat-icon *ngIf="!configuration.rtlLayout" [@ExpandedLTR]="item.expanded ? 'yes' : 'no'">
+                      keyboard_arrow_down
+                  </mat-icon>
+                  <mat-icon *ngIf="configuration.rtlLayout" [@ExpandedRTL]="item.expanded ? 'yes' : 'no'">
+                      keyboard_arrow_down
+                  </mat-icon>
+              </div>
+          </div>
+      </ng-template>
+  </ng-material-multilevel-menu>
 </div>
 
