--- a/src/app/modules/auth/register/register.component.scss
+++ b/src/app/modules/auth/register/register.component.scss
@@ -19,9 +19,11 @@ button{
 }
 .width100{
     width: 100%;
+    margin-top: 100px;
 }
 .width80{
     width: 40%;
+    margin-top: 100px;
 }
 mat-form-field{
     margin-right: 20px;
