--- a/src/app/modules/AdminSettings/roleapppermission/roleappadd/roleappadd.component.scss
+++ b/src/app/modules/AdminSettings/roleapppermission/roleappadd/roleappadd.component.scss
@@ -6,10 +6,11 @@
 mat-card{
     margin: auto;
     align-self: center;
-    margin-top: -180px;
+    margin-top: -100px;
+    padding:50px;
     //background-color: lightgray;
     width:80%;
 }
-alert{
-    z-index: 999;
+mat-form-field{
+    margin-right: 15px;
 }
