--- a/src/app/modules/AdminSettings/users/appuser/user.component.scss
+++ b/src/app/modules/AdminSettings/users/appuser/user.component.scss
@@ -3,14 +3,13 @@
     align-items: center;
 }
 mat-card{
-    margin: auto;
-    align-self: center;
-    margin-top: -280px;
-    //background-color: lightgray;
+    position: absolute;
+    padding-left: 50px;
+    padding-top: 50px;
     width:80%;
 }
 mat-form-field{
-    margin-right: 15px;
+    margin-right: 50px;
 }
 div{
     padding: 10px 0px;
